new compnay layout

--- a/statamic/_config/fieldsets/company.yaml
+++ b/statamic/_config/fieldsets/company.yaml
@@ -2,8 +2,9 @@ title: Company
 
 fields:
   beliefs:
-    type: redactor
+    type: textarea
     display: Beliefs
+    height: 100
   why:
     type: redactor
     display: Why Garfield
@@ -18,22 +19,16 @@ fields:
         display: Description
         type: textarea
         height: 75
-  history_1:
+  history:
     type: redactor
     display: History Column 1
-  history_2:
-    type: redactor
-    display: History Column 2
   international_image:
     type: file
     display: International Partner Logo
     destination: assets/img
     allowed: [jpg,jpeg,png]
-  international_1:
+  international:
     type: redactor
     display: International Column 1
-  international_2:
-    type: redactor
-    display: International Column 2
   content:
    hide: true
