first font updates

--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -44,7 +44,7 @@ fields:
     max_items: 1
     taxonomy:
       type: property_location
-      folder: properties/garfield/*
+      folder: properties/new-york/*
   lat_long:
     display: Property Coordinates
     type: grid
@@ -107,7 +107,7 @@ fields:
     max_items: 1
     taxonomy:
       type: property_type
-      folder: properties/garfield/*
+      folder: properties/new-york/*
   ownership_type:
     display: Ownership Type
     type: suggest
