--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -104,7 +104,7 @@ fields:
       folder: properties/new-york/*
   ownership:
     type: select
-    display: Ownership Type (condo, coop, etc). REQUIRED
+    display: Ownership Type. REQUIRED.
     required: True
     options:
       townhouse: Townhouse
