--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -77,7 +77,8 @@ fields:
     type: checkbox
   openhouse_grid:
     type: grid
-    display: Open House(s)
+    display: Open House
+    max_rows: 1
     fields:
       date:
         type: date
@@ -118,6 +119,7 @@ fields:
       condo: Condo
       coop: Co-op
       house: House
+      other: Other
   plot:
     type: text
     display: Plot
