--- a/statamic/_config/fieldsets/page.yaml
+++ b/statamic/_config/fieldsets/page.yaml
@@ -1,40 +1,16 @@
+
 fields:
-
-  my_replicator_field:
-    type: replicator
-    instructions: |
-      Replicate a new set for each piece of content you need.
-
-    sets:
-
-      content_set:
-        display: Content
-        instructions: A basic block of text
-        fields:
-          text:
-            display: Text
-            type: markitup
-
-      quote_set:
-        display: Quote
-        instructions: A lovely pullquote
-        fields:
-          quote:
-            type: textarea
-            height: 40
-            instructions: What was said?
-          cite:
-            type: text
-            instructions: Who said it?
-
-      image_set:
-        display: Image
-        instructions: Showcase your adventures in a gallery
-        fields:
-          photo:
-            type: file
-            allowed: [png, jpg, gif]
-            destination: assets/img/
-          caption:
-            type: text
-            instructions: Describe the photo
+  hero_image:
+    display: Hero Image (Optional)
+    type: file
+    destination: assets/img/
+    allowed: [png, gif, jpg, jpeg]
+  header: 
+    type: text
+    display: Main Tagline
+  sub_header: 
+    type: textarea
+    display: Sub Tagline
+    height: 100 
+  content:
+    hide: true
