--- a/statamic/_config/fieldsets/services.yaml
+++ b/statamic/_config/fieldsets/services.yaml
@@ -4,6 +4,13 @@ fields:
 		destination: assets/img/
 		display: Hero Image
 		allowed: [jpeg, jpg, png]
+  header: 
+    type: text
+    display: Main Tagline
+  sub_header: 
+    type: textarea
+    display: Sub Tagline
+    height: 100 
 	individual_subheader:
 		type: text
 		display: Individuals & Families Subheader
