euros and pounds

--- a/statamic/_config/fieldsets/property_beauchamp_lease.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_lease.yaml
@@ -14,6 +14,12 @@ fields:
   apartment:
     type: text
     display: Apartment Number or Letter (optional)
+  currency:
+    type: select
+    display: Choose currency
+    options:
+       - sterling
+       - euros
   price:
     type: text
     default: 0
