--- a/statamic/_config/fieldsets/property_beauchamp_sale.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_sale.yaml
@@ -17,6 +17,12 @@ fields:
   country:
     type: text
     display: Country
+  currency:
+    type: select
+    display: Choose currency
+    options:
+       - sterling
+       - euros
   price:
     type: text
     default: 0
