--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -168,6 +168,7 @@ fields:
     display: Key Features
     create: false
     options:
+      prewar: Prewar
       balcony: Balcony
       dishwasher: Dishwasher
       doorman: Doorman
