--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -146,6 +146,7 @@ fields:
     display: Key Features
     create: false
     options:
+      prewar: Prewar
       balcony: Balcony
       dishwasher: Dishwasher
       doorman: Doorman
