--- a/statamic/_config/fieldsets/property_leased.yaml
+++ b/statamic/_config/fieldsets/property_leased.yaml
@@ -6,6 +6,7 @@ fields:
     type: suggest
     create: true
     max_items: 1
+    display: Neighborhood
     taxonomy:
       type: property_location
       folder: properties/garfield/*
