--- a/statamic/_config/fieldsets/property_sold.yaml
+++ b/statamic/_config/fieldsets/property_sold.yaml
@@ -8,6 +8,7 @@ fields:
     type: suggest
     create: true
     max_items: 1
+    display: Neighborhood
     taxonomy:
       type: property_location
       folder: properties/garfield/*
