--- a/statamic/_config/formsets/contact.yaml
+++ b/statamic/_config/formsets/contact.yaml
@@ -7,24 +7,20 @@
 ###########################################################################################
 
 # Location (from root) to save form submissions
-submission_save_path: _forms/_non_specific/
+submission_save_path: _forms/_contact/
 
 # Fields allowed to be submitted in the form, automatically
 # purging anything and everything else
 allowed:
   - FNAME
   - LNAME
-  - email
+  - EMAIL
   - phone
 
 # You are not required to require fields, but once you do, any missing
 # from the POST will squash this submission and send a list of
 # missing fields to your {{ raven:errors }} tagpair
-required:
-  - name
-  - address
-  - email
-  - phone
+
 
 submission_save_extension: yaml
 
@@ -50,9 +46,9 @@ messages:
 
 # Configure notification email
 email:
-  to: pgauthier@gmail.com
+  to: info@lesliegarfield.com
   from: info@lesliegarfield.com
-  subject: The raven has flown
+  subject: Contact Page Lead
   automagic: true
   # html_template: html_email
   # text_template: text_email
@@ -61,13 +57,13 @@ datestamp_format: "m/d/Y"
 
 control_panel:
   fields:
-    - name
-    - address
-    - email
+    - FNAME
+    - LNAME
+    - EMAIL
     - phone
   metrics:
     - 
       type: count
-      field: email
+      field: FNAME
       label: Total Forms Received
 
