--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -17,26 +17,30 @@ fields:
     default: rental
   street_address:
     type: text
-    display: Street Address
+    display: Street Address Line 1 (No Apartment Numbers) *STREETEASY
+    required: true
   apartment:
     type: text
     display: Apartment Number or Letter (optional)
   city:
     type: text
-    display: City
+    display: City *STREETEASY
     default: New York
+    required: true
   state:
     type: text
-    display: State
+    display: State *STREETEASY
     default: NY
+    required: true
   zip_code:
     type: text
-    display: Zip Code
+    display: Zip Code *STREETEASY
+    required: true
   price:
     type: text
     default: 0
     required: true
-    display: Lease Price / Must be Monthly Rate
+    display: Lease Price / Must be Monthly Rate *STREETEASY
     instructions:
       above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
   terms:
@@ -53,12 +57,14 @@ fields:
   location:
     type: location
     display: Location
+    required: true
   location_granular:
     type: text
     display: More detailed location ie Between Fifth and Madison
   streeteasy_status:
     type: select
-    display: Status
+    display: Status *STREETEASY
+    required: true
     options:
       - Active
       - In Contract
@@ -88,9 +94,10 @@ fields:
         width: 28%
         display: Appt Only?
   agents:
-    display: Agents
+    display: Agents *STREETEASY
     type: suggest
     create: true
+    required: true
     content:
       folder: agents/garfield
       label: title
@@ -105,7 +112,7 @@ fields:
       folder: properties/new-york/*
   ownership:
     type: select
-    display: Ownership Type. REQUIRED.
+    display: Ownership Type. *STREETEASY
     required: True
     options:
       rental: Rental
@@ -122,18 +129,27 @@ fields:
     display: Stories
   sqft:
     type: text
-    display: Square Feet
+    display: Square Feet (Number Only, No Commas, No Extra Text)
   units:
     type: text
     display: Units / Apts
+  rooms:
+    type: text
+    display: Total Rooms *STREETEASY
+    required: true
   bedrooms:
-    display: Bedrooms
+    display: Bedrooms *STREETEASY
     type: text
+    required: true
   bathrooms:
-    display: Bathrooms
+    display: Bathrooms *STREETEASY
     type: text
+    required: true
   powder:
     display: Powder Rooms
+    type: text
+  maintenance:
+    display: Maintenance Fees
     type: text
   amenities:
     type: checkboxes
@@ -166,8 +182,9 @@ fields:
       type: key_features
   summary_intro:
     type: textarea
-    display: Enter the first paragraph of property summary
+    display: Enter the first paragraph of property summary *STREETEASY
     height: 200
+    required: true
   summary_full:
     type: redactor
     display: Enter the rest of the summary
