--- a/statamic/_config/add-ons/raven/raven.yaml
+++ b/statamic/_config/add-ons/raven/raven.yaml
@@ -10,7 +10,7 @@
 submission_save_to_file: true
 
 # Location (from root) to save form submissions
-# submission_save_path: _forms/
+submission_save_path: _forms/
 
 send_notification_email: true
 
