--- a/statamic/_config/formsets/General_Enquiries.yaml
+++ b/statamic/_config/formsets/General_Enquiries.yaml
@@ -7,7 +7,7 @@
 ###########################################################################################
 
 # Location (from root) to save form submissions
-submission_save_path: /_forms/_contact/
+submission_save_path: _forms/_contact/
 
 # Fields allowed to be submitted in the form, automatically
 # purging anything and everything else
