--- a/statamic/_config/formsets/Valuation_Requests.yaml
+++ b/statamic/_config/formsets/Valuation_Requests.yaml
@@ -7,7 +7,7 @@
 ###########################################################################################
 
 # Location (from root) to save form submissions
-submission_save_path: /_forms/_valuation/
+submission_save_path: _forms/_valuation/
 
 # Fields allowed to be submitted in the form, automatically
 # purging anything and everything else
