--- a/statamic/_config/formsets/general_enquiries.yaml
+++ b/statamic/_config/formsets/general_enquiries.yaml
@@ -46,7 +46,7 @@ submission_save_extension: yaml
 
 # Configure notification email
 email:
-  to: pgauthier@gmail.com
+  to: info@lesliegarfield.com
   from: info@lesliegarfield.com
   subject: Contact Page Lead
   automagic: true
