changed beauchamp taxonimies

--- a/statamic/_config/fieldsets/property_beauchamp_sale.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_sale.yaml
@@ -42,7 +42,7 @@ fields:
     display: Neighborhood
     taxonomy:
       type: property_location
-      folder: properties/international
+      folder: properties/international/*
   location:
     type: location
     display: Location
