changed beauchamp taxonimies

--- a/statamic/_config/fieldsets/property_beauchamp_lease.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_lease.yaml
@@ -167,6 +167,9 @@ fields:
     instructions: Click Upload a File or Drag and Drop on the Upload box. You can upload multiple files at once.
     allowed: [png, gif, jpg, jpeg]
     destination: assets/img/properties/sale
+    resize:
+      width: 900
+      height: 600
   brochure:
     type: file
     display: Property Brochure
