--- a/statamic/_config/formsets/valuation_requests.yaml
+++ b/statamic/_config/formsets/valuation_requests.yaml
@@ -57,10 +57,11 @@ datestamp_format: "m/d/Y"
 
 control_panel:
   fields:
-    - name
-    - address
-    - email
-    - phone
+    datestamp: Date
+    name: Name
+    address: Address
+    email: Email
+    phone: Phone
   metrics:
     - 
       type: count
