--- a/statamic/_config/add-ons/raven/raven.yaml
+++ b/statamic/_config/add-ons/raven/raven.yaml
@@ -31,6 +31,6 @@ email_handler_key:Ko-n7XPY1DYpUVcPpDYq2A
 
 master_killswitch: false
 
-datestamp_format: "m/d/Y"
+datestamp_format: "m/d/Y g:ha"
 
 # akismet_api_key: 
