--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -69,6 +69,9 @@ fields:
   streeteasy:
     display: ACTIVATE STREETEASY?
     type: checkbox
+  sold_date:
+    type: date
+    display: Sold Date
   openhouse:
     display: Open House?
     type: checkbox
