--- a/statamic/_config/formsets/property_viewing_requests.yaml
+++ b/statamic/_config/formsets/property_viewing_requests.yaml
@@ -56,7 +56,7 @@ submission_save_extension: yaml
 email:
   to: "{{ email_address }}"
   from: info@lesliegarfield.com
-  subject: '{{ listing-address }}'
+  subject: 'Viewing Request - {{ listing-address }}'
   automagic: true
   # html_template: html_email
   # text_template: text_email
@@ -66,6 +66,7 @@ datestamp_format: "m/d/Y"
 control_panel:
   fields:
     datestamp: Date
+    listing-address: Address
     name: Name
     email: Email
     phone_mobile: Cell
