--- a/statamic/_config/formsets/general_enquiries.yaml
+++ b/statamic/_config/formsets/general_enquiries.yaml
@@ -12,10 +12,11 @@ submission_save_path: _forms/_contact/
 # Fields allowed to be submitted in the form, automatically
 # purging anything and everything else
 allowed:
-  - first_name
-  - last_name
+  - name
   - email
+  - regarding
   - phone
+  - message
 
 # You are not required to require fields, but once you do, any missing
 # from the POST will squash this submission and send a list of
@@ -58,12 +59,12 @@ datestamp_format: "m/d/Y/g/h/a"
 control_panel:
   fields:
     datestamp: Date
-    first_name: First Name
+    name: Name
     email: Email
     phone: Phone
   metrics:
     - 
       type: count
-      field: first_name
+      field: name
       label: Total Forms Received
 
