--- a/statamic/_config/fieldsets/property_leased.yaml
+++ b/statamic/_config/fieldsets/property_leased.yaml
@@ -9,7 +9,7 @@ fields:
     display: Neighborhood
     taxonomy:
       type: property_location
-      folder: properties/garfield/*
+      folder: properties/new-york/*
   streeteasy_status:
     type: select
     hide: true
@@ -36,6 +36,6 @@ fields:
     max_items: 1
     taxonomy:
       type: property_type
-      folder: properties/garfield/*
+      folder: properties/new-york/*
   content:
     hide: true
