--- a/statamic/_config/fieldsets/property_beauchamp_sale.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_sale.yaml
@@ -54,9 +54,9 @@ fields:
     type: select
     display: Status
     options:
-      - Active
-      - In Contract
-      - Sold
+      active: Active
+      in-contract: In Contract
+      sold: Sold
   openhouse_grid:
     type: grid
     display: Open House(s)
