--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -99,7 +99,7 @@ fields:
     display: Agents (STREETEASY) - First listed agent will receive Viewing Requests
     type: suggest
     create: true
-    required: true
+    required: false
     content:
       folder: agents/garfield
       label: title
