--- a/statamic/_config/fieldsets/property_lease.yaml
+++ b/statamic/_config/fieldsets/property_lease.yaml
@@ -200,6 +200,10 @@ fields:
     type: file
     destination: assets/img/properties/sale
     allowed: [png, gif, jpg, jpeg]
+    resize:
+      width: 300
+      height: 300
+      quality: 90
   photo_carousel:
     type: file
     force_array: true
@@ -211,10 +215,12 @@ fields:
     type: file
     display: Property Brochure
     destination: assets/downloads
+    max_files: 1
   floor_plans:
     type: file
     display: Property Floorplans
     destination: assets/downloads
+    max_files: 1
   content:
     type: redactor
     hide: true
