fixed beauchamp lease agents

--- a/statamic/_config/fieldsets/property_beauchamp_lease.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_lease.yaml
@@ -83,7 +83,7 @@ fields:
     type: suggest
     create: true
     content:
-      folder: agents/international
+      folder: agents/beauchamp
       label: title
       value: url
   property_type:
