--- a/statamic/_config/fieldsets/property_beauchamp_lease.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_lease.yaml
@@ -58,6 +58,8 @@ fields:
       active: Active
       in-contract: In Contract
       sold: Sold
+      off-market: Off Market
+      temp-off-market: Temporarily Off Market
   openhouse:
     display: Open House?
     type: checkbox
