--- a/statamic/_config/fieldsets/property_beauchamp_sale.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_sale.yaml
@@ -57,6 +57,8 @@ fields:
       active: Active
       in-contract: In Contract
       sold: Sold
+      off-market: Off Market
+      temp-off-market: Temporarily Off Market
   openhouse_grid:
     type: grid
     display: Open House(s)
