--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -226,6 +226,10 @@ fields:
     type: file
     destination: assets/img/properties/sale
     allowed: [png, gif, jpg, jpeg]
+    resize:
+      width: 300
+      height: 300
+      quality: 100
   photo_carousel:
     type: file
     force_array: true
